Disable button during login action

--- a/src/locales/en/login.json
+++ b/src/locales/en/login.json
@@ -3,6 +3,9 @@
     "id": "Enter ID",
     "password": "Enter password",
     "msg": {
+        "info": {
+            "loggingIn": "Logging in ..."
+        },
         "error": {
             "failedToLogin": "Failed to login.",
             "failedToSaveData": "Failed to save data"
