--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,22 +1,36 @@
 {
-    "menu": "Menu",
-    "release": "Ungrant",
-    "approve": "Approve",
-    "decline": "Decline",
+    "me": "Me",
+    "menu": {
+        "title": "Menu",
+        "notification": {
+            "title": "Notifications",
+            "header": "List of notifications"
+        }
+    },
+    "navbar": {
+        "toggleNavigation": "Toggle navigation",
+        "appName": "$t(glossary:title)"
+    },
+    "sessionExpiredDialog": {
+        "title": "$t(glossary:sessionExpiredDialog.title)",
+        "message": "Session has expired.<br>$t(glossary:sessionExpiredDialog.action)",
+        "btnOk": "$t(glossary:sessionExpiredDialog.btnOk)"
+    },
+    "irrecoverableErrorDialog": {
+        "title": "$t(glossary:irrecoverableErrorDialog.title)"
+    },
     "readRequestTitle": "$t(glossary:readRequestTarget)_Read Permission Request",
-    "readRequestBody": "Please grant read permission for your $t(glossary:readRequestTarget).",
+    "readRequestBody": "Please grant read permission for your $t(glossary:readRequestBodyTarget).",
     "readResponseTitle": "$t(glossary:readRequestTarget)_Read Permission Reply",
     "readResponseApprovedBody": "Read permission is granted.",
     "readResponseDeclinedBody": "Read permission is not granted.",
-    "me": "Me",
-    "sessionExpiredDialog": {
-        "title": "Re-Login",
-        "message": "Session has expired.<br>Please login again."
+    "error": {
+        "title": "Error",
+        "label": "Error"
     },
     "msg": {
         "info": {
-            "collaboratingData": "Synchronizing data ...",
-            "pleaseSelectTargetCell": "Please select a cell.",
+            "pleaseSelectTargetCell": "Please select a $t(glossary:dataSubject.label).",
             "messageSent": "Succeeded in sending the message."
         },
         "error": {
@@ -30,5 +44,13 @@
             "dataNotFound": "Data not found.",
             "failedToRefreshToken": "Failed to refresh token.<br>Please reload page."
         }
+    },
+    "btn": {
+        "cancel": "Cancel",
+        "edit": "Edit",
+        "save": "Save",
+        "release": "Ungrant",
+        "approve": "Approve",
+        "decline": "Decline"
     }
 }
