Use correct i18next keyword in messages
Fixes #27

--- a/src/locales/en/glossary.json
+++ b/src/locales/en/glossary.json
@@ -14,7 +14,7 @@
         "btnOk": "OK"
     },
     "irrecoverableErrorDialog": {
-        "title": "Terminating $(glossary:title) ..."
+        "title": "Terminating $t(glossary:title) ..."
     },
     "dataSubject": {
         "label": "cell"
