--- a/src/locales/ja/glossary.json
+++ b/src/locales/ja/glossary.json
@@ -14,7 +14,7 @@
         "btnOk": "OK"
     },
     "irrecoverableErrorDialog": {
-        "title": "$(glossary:title)を終了します ..."
+        "title": "$t(glossary:title)を終了します ..."
     },
     "dataSubject": {
         "label": "セル"
